[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnforge"
version = "0.1.0"
description = "AI驱动的自动化漏洞挖掘框架 — 输入目标，坐等报告"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["security", "vulnerability", "penetration-test", "ai", "bug-bounty"]
authors = [
    {name = "VulnForge Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Vulnerability Management",
]
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.9.0",
    "colorama>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/yourname/vulnforge"
Documentation = "https://github.com/yourname/vulnforge#readme"
Issues = "https://github.com/yourname/vulnforge/issues"
Source = "https://github.com/yourname/vulnforge"

[project.scripts]
vulnforge = "vulnforge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vulnforge*"]
